index for github pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>NBA Teams</title>
 
         <script id="sap-ui-bootstrap"
-                src="resources/sap-ui-core.js"
+                src="https://ui5.sap.com/1.80.1/resources/sap-ui-core.js"
                 data-sap-ui-theme="sap_fiori_3"
                 data-sap-ui-resourceroots='{"ovly.app": "./webapp"}'
                 data-sap-ui-compatVersion="edge"
